<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_open"
        android:title="@string/open" />

    <item
        android:id="@+id/action_favorite"
        android:title="@string/add_to_favorites" />

    <item
        android:id="@+id/action_copy"
        android:title="@string/copy" />

    <item
        android:id="@+id/action_paste"
        android:title="@string/paste" />

    <item
        android:id="@+id/action_rename"
        android:title="@string/rename" />

    <item
        android:id="@+id/action_compress"
        android:title="@string/compress_to_zip" />

    <item
        android:id="@+id/action_extract"
        android:title="@string/extract_to_folder" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete" />

    <item
        android:id="@+id/action_open_with"
        android:title="@string/open_with_other_app" />
</menu>